[package]
name = "abc"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"

# Simply does not work. Leads always to fallback to 5.2.3. Using 'config.toml' env, instead.
#[package.metadata.esp-idf-sys]
#esp_idf_version = "v5.5"

[dependencies]
esp-idf-svc = { version = "0.52" }   # only supports esp-idf 5.2 and 5.3; falls back to 5.2.3.
log = "0.4"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
anyhow = "1.0"
embuild = "0.33"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[[bin]]
name = "abc"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

# Allow 'esp-idf' 5.4 and/or 5.5 to be used
#[patch.crates-io]
#esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", branch = "master" } # 5.3..5.5
#esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }
#esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", branch = "master" }
